welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:17: error: type mismatch;
 found   : Unit
 required: Boolean
    prendBiscuit()
                ^SlugTracking:16: error: type mismatch;
 found   : Unit
 required: Boolean
  if (estSurBiscuit())
  ^